Update assignment_2 grocery_sales v41_final.ipynb

--- a/assignment_2 grocery_sales v41_final.ipynb
+++ b/assignment_2 grocery_sales v41_final.ipynb
@@ -5,8 +5,8 @@
    "id": "43f5d466-af1f-4288-94d2-2528df432780",
    "metadata": {},
    "source": [
-    "Student Name : Rajive Kumaranayake\n",
-    "### Assignment 2 : Data Analysis Project\n",
+    "Name : Rajive Kumaranayake\n",
+    "### Data Analysis Project\n",
     "\n",
     "#### Grocery Sales Analyse\n"
    ]
